--- a/css.html
+++ b/css.html
@@ -1,32 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Meta information about the page for character encoding and mobile responsiveness -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS - Assy J-C EDDY</title>
 
-    <!-- Link to external CSS file -->
+    <!-- Link to external CSS file for styling -->
     <link rel="stylesheet" href="style.css">
 
-    <!-- Font Awesome for icons -->
+    <!-- Font Awesome for icons like the moon for dark mode and others -->
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 
-    <!-- Google Fonts -->
+    <!-- Google Fonts for custom typography -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cascadia+Code&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Sixtyfour+Convergence&display=swap" rel="stylesheet">
 </head>
 <body>
+    <!-- Header section containing logo and navigation menu -->
     <header>
         <div class="container">
             <header class="header-container">
+                <!-- Logo links back to the homepage -->
                 <label for="check" class="logo"><a href="index.html">AJC EDDY</a></label>
                 <nav>
+                    <!-- Navigation menu items -->
                     <ul class="menu">
                         <li><a href="downloadcv.html">Download CV</a></li>
                         <li><a href="contact.html">Contact</a></li>
-                        <!-- Dark Mode Toggle -->
+                        <!-- Dark Mode Toggle button -->
                         <div class="theme-toggle">
                             <input type="checkbox" id="theme-switch">
                             <label for="theme-switch" class="toggle-label">
@@ -39,74 +43,83 @@
         </div>
     </header>
 
+    <!-- Main content wrapper -->
     <div class="maindiv">
-        <!-- Main title -->
+        <!-- Portfolio Main Title -->
         <div class="titlediv1">
-            <h1 class="titleh1"> Assy J-C EDDY's <br> portfolio</h1>  
-        </div>
-<!-- Image section -->
-<div class="body-image">
-    <img src="2.jpg" alt="Portfolio Image">
-</div>
-
-<!-- Body text section -->
-<div class="body-text">
-    <div class="titlediv1">
-        <h1 class="titleh1">CSS Skills</h1>
-    </div>
-
-        <p>As a skilled software developer, I have extensive expertise in CSS (Cascading Style Sheets), enabling me to create visually engaging and responsive web designs. My proficiency includes:
-
-            Advanced CSS Techniques: Mastery of layout models such as Flexbox and Grid, allowing for flexible and efficient designs that adapt to various screen sizes.
-            Responsive Design: Implementing media queries and fluid layouts to ensure seamless user experiences across desktops, tablets, and mobile devices.
-            Cross-Browser Compatibility: Ensuring consistent styling and performance across multiple browsers, enhancing accessibility for all users. <br>
-            Animation and Transitions: Utilizing CSS animations and transitions to add interactivity and enhance user engagement without compromising performance. <br>
-            Preprocessors and Methodologies: Familiarity with CSS preprocessors like SASS or LESS, and methodologies like BEM (Block Element Modifier) for scalable and maintainable code. <br>
-            With a strong focus on user experience and aesthetic appeal, I leverage CSS to transform concepts into visually stunning and functional web applications that delight users.</p></div>
-</div>
-</div>
-<!-- Footer Section -->
-<footer class="footer">
-    <div class="container">
-        <!-- Footer Contact Details -->
-        <div class="footer-contact">
-            <h2>Contact Me</h2>
-            <p><strong>Name:</strong> Assy Jean-Claude EDDY</p>
-            <p><strong>Phone:</strong> +44 7 42 42 42 793</p>
-            <p><strong>Email:</strong> <a href="mailto:ajceddy@gmail.com">ajceddy@gmail.com</a></p>
-            <a aria-label="Chat on WhatsApp" href="https://wa.me/00447424242793"> <img alt="Chat on WhatsApp" src="WhatsAppButtonGreenLarge.png"/><a/>
+            <h1 class="titleh1">Assy J-C EDDY's <br> Portfolio</h1>  
         </div>
 
-        <!-- Footer Contact Form -->
-        <div class="footer-form">
-            <h2>Get In Touch</h2>
-            <form action="#" method="POST">
-                <div class="form-group">
-                    <input type="text" name="name" placeholder="Your Name" required>
-                </div>
-                <div class="form-group">
-                    <input type="email" name="email" placeholder="Your Email" required>
-                </div>
-                <div class="form-group">
-                    <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
-                </div>
-                <button type="submit" class="submit-btn">Send Message</button>
-            </form>
+        <!-- Image Section displaying a portfolio image -->
+        <div class="body-image">
+            <img src="2.jpg" alt="Portfolio Image">
+        </div>
+
+        <!-- Body text section for CSS skills -->
+        <div class="body-text">
+            <div class="titlediv1">
+                <h1 class="titleh1">CSS Skills</h1>
+            </div>
+
+            <!-- CSS skills explanation with detailed breakdown -->
+            <p>As a skilled software developer, I have extensive expertise in CSS (Cascading Style Sheets), enabling me to create visually engaging and responsive web designs. My proficiency includes:</p>
+            <ul>
+                <li><strong>Advanced CSS Techniques:</strong> Mastery of layout models such as Flexbox and Grid, allowing for flexible and efficient designs that adapt to various screen sizes.</li>
+                <li><strong>Responsive Design:</strong> Implementing media queries and fluid layouts to ensure seamless user experiences across desktops, tablets, and mobile devices.</li>
+                <li><strong>Cross-Browser Compatibility:</strong> Ensuring consistent styling and performance across multiple browsers, enhancing accessibility for all users.</li>
+                <li><strong>Animation and Transitions:</strong> Utilizing CSS animations and transitions to add interactivity and enhance user engagement without compromising performance.</li>
+                <li><strong>Preprocessors and Methodologies:</strong> Familiarity with CSS preprocessors like SASS or LESS, and methodologies like BEM (Block Element Modifier) for scalable and maintainable code.</li>
+            </ul>
+            <p>With a strong focus on user experience and aesthetic appeal, I leverage CSS to transform concepts into visually stunning and functional web applications that delight users.</p>
         </div>
     </div>
 
-    <!-- Footer Bottom -->
-    <div class="footer-bottom">
-        <p>&copy; 2024 Assy Jean-Claude EDDY. All rights reserved.</p>
-    </div>
-</footer>
+    <!-- Footer Section with contact information and a form -->
+    <footer class="footer">
+        <div class="container">
+            <!-- Footer Contact Information -->
+            <div class="footer-contact">
+                <h2>Contact Me</h2>
+                <p><strong>Name:</strong> Assy Jean-Claude EDDY</p>
+                <p><strong>Phone:</strong> +44 7 42 42 42 793</p>
+                <p><strong>Email:</strong> <a href="mailto:ajceddy@gmail.com">ajceddy@gmail.com</a></p>
+                <a aria-label="Chat on WhatsApp" href="https://wa.me/00447424242793"> 
+                    <img alt="Chat on WhatsApp" src="WhatsAppButtonGreenLarge.png"/>
+                </a>
+            </div>
+
+            <!-- Footer Contact Form -->
+            <div class="footer-form">
+                <h2>Get In Touch</h2>
+                <form action="#" method="POST">
+                    <!-- Input fields for name, email, and message -->
+                    <div class="form-group">
+                        <input type="text" name="name" placeholder="Your Name" required>
+                    </div>
+                    <div class="form-group">
+                        <input type="email" name="email" placeholder="Your Email" required>
+                    </div>
+                    <div class="form-group">
+                        <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
+                    </div>
+                    <!-- Submit button for the form -->
+                    <button type="submit" class="submit-btn">Send Message</button>
+                </form>
+            </div>
+        </div>
+
+        <!-- Footer Bottom Section -->
+        <div class="footer-bottom">
+            <p>&copy; 2024 Assy Jean-Claude EDDY. All rights reserved.</p>
+        </div>
+    </footer>
 
     <!-- Script for dark mode functionality -->
     <script>
         const themeSwitch = document.getElementById('theme-switch');
         themeSwitch.addEventListener('change', () => {
             document.body.classList.toggle('dark-mode'); // Toggle dark mode class
-            localStorage.setItem('theme', document.body.classList.contains('dark-mode') ? 'dark' : 'light'); // Save the theme preference
+            localStorage.setItem('theme', document.body.classList.contains('dark-mode') ? 'dark' : 'light'); // Save theme preference
         });
 
         // Load the preferred theme on page load
@@ -118,9 +131,5 @@
             }
         };
     </script>
-</body>
-</html>
-
-    
 </body>
 </html>
