--- a/downloadcv.html
+++ b/downloadcv.html
@@ -25,7 +25,7 @@
     <!-- Header section -->
     <header>
         <div class="container">
-            <header class="header-container">
+            <div class="header-container">
                 <label for="check" class="logo"><a href="index.html">AJC EDDY</a></label>
                 <nav>
                     <ul class="menu">
@@ -40,93 +40,90 @@
                         </div>
                     </ul>
                 </nav>
-            </header>
+            </div>
         </div>
     </header>
 
     <div class="maindiv">
- <!-- Main title -->
- <div class="titlediv1">
-    <h1 class="titleh1">DOWNLOAD MY RESUME</h1>
-</div>
-<!-- Main Download Section -->
-<section class="download-section">
-<div class="container">
-<br>
-<br>
-<h1>Download My CV</h1>
-<br>
-<br>
-<p>Get a comprehensive overview of my professional experience, skills, and projects by downloading my CV.</p>
-
-<!-- CV Preview -->
-<div class="cv-preview">
-    <img src="cv-thumbnail.jpg" alt="CV Preview" class="cv-image">
-</div>
-
-<!-- Download Button -->
-<div class="download-button">
-    <br>
-    <br>
-    <a href="assets/Assy-Jean-Claude-EDDY-CV.pdf" download="Assy-JC-EDDY-CV" class="cv-btn">
-        <i class="fas fa-download"></i> Download CV
-    </a>
-</div>
-
-<!-- Professional Summary -->
-<div class="summary">
-    <br>
-    <br>
-    <h2>Why Download My CV?</h2>
-    <br>
-    <br>
-    <p>
-        With expertise in beauty and fashion consulting, and deep knowledge of African textiles, I offer
-        unique insights and services that set me apart in the industry. My CV details the projects I’ve
-        led, the clients I’ve worked with, and the contributions I’ve made to the world of fashion and
-        beauty. Download it today to learn more.
-    </p>
-</div>
-</div>
-</section>
-</div>
-
-    <!-- Footer section -->
-<!-- Footer Section -->
-<footer class="footer">
-    <div class="container">
-        <!-- Footer Contact Details -->
-        <div class="footer-contact">
-            <h2>Contact Me</h2>
-            <p><strong>Name:</strong> Assy Jean-Claude EDDY</p>
-            <p><strong>Phone:</strong> +44 7 42 42 42 793</p>
-            <p><strong>Email:</strong> <a href="mailto:ajceddy@gmail.com">ajceddy@gmail.com</a></p>
-            <a aria-label="Chat on WhatsApp" href="https://wa.me/00447424242793"> <img alt="Chat on WhatsApp" src="WhatsAppButtonGreenLarge.png"/><a/>
+        <!-- Main title -->
+        <div class="titlediv1">
+            <h1 class="titleh1">DOWNLOAD MY RESUME</h1>
         </div>
 
-        <!-- Footer Contact Form -->
-        <div class="footer-form">
-            <h2>Get In Touch</h2>
-            <form action="#" method="POST">
-                <div class="form-group">
-                    <input type="text" name="name" placeholder="Your Name" required>
+        <!-- Main Download Section -->
+        <section class="download-section">
+            <div class="container">
+                <br><br>
+                <h1>Download My CV</h1>
+                <br><br>
+                <p>Get a comprehensive overview of my professional experience, skills, and projects by downloading my CV.</p>
+
+                <!-- CV Preview -->
+                <div class="cv-preview">
+                    <img src="cv-thumbnail.jpg" alt="CV Preview" class="cv-image">
                 </div>
-                <div class="form-group">
-                    <input type="email" name="email" placeholder="Your Email" required>
+
+                <!-- Download Button -->
+                <div class="download-button">
+                    <br><br>
+                    <a href="assets/Assy-Jean-Claude-EDDY-CV.pdf" download="Assy-JC-EDDY-CV" class="cv-btn">
+                        <i class="fas fa-download"></i> Download CV
+                    </a>
                 </div>
-                <div class="form-group">
-                    <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
+
+                <!-- Professional Summary -->
+                <div class="summary">
+                    <br><br>
+                    <h2>Why Download My CV?</h2>
+                    <br><br>
+                    <p>
+                        With expertise in beauty and fashion consulting, and deep knowledge of African textiles, I offer
+                        unique insights and services that set me apart in the industry. My CV details the projects I’ve
+                        led, the clients I’ve worked with, and the contributions I’ve made to the world of fashion and
+                        beauty. Download it today to learn more.
+                    </p>
                 </div>
-                <button type="submit" class="submit-btn">Send Message</button>
-            </form>
-        </div>
+            </div>
+        </section>
     </div>
 
-    <!-- Footer Bottom -->
-    <div class="footer-bottom">
-        <p>&copy; 2024 Assy Jean-Claude EDDY. All rights reserved.</p>
-    </div>
-</footer>
+    <!-- Footer Section -->
+    <footer class="footer">
+        <div class="container">
+            <!-- Footer Contact Details -->
+            <div class="footer-contact">
+                <h2>Contact Me</h2>
+                <p><strong>Name:</strong> Assy Jean-Claude EDDY</p>
+                <p><strong>Phone:</strong> +44 7 42 42 42 793</p>
+                <p><strong>Email:</strong> <a href="mailto:ajceddy@gmail.com">ajceddy@gmail.com</a></p>
+                <a aria-label="Chat on WhatsApp" href="https://wa.me/00447424242793">
+                    <img alt="Chat on WhatsApp" src="WhatsAppButtonGreenLarge.png" />
+                </a>
+            </div>
+
+            <!-- Footer Contact Form -->
+            <div class="footer-form">
+                <h2>Get In Touch</h2>
+                <form action="#" method="POST">
+                    <div class="form-group">
+                        <input type="text" name="name" placeholder="Your Name" required>
+                    </div>
+                    <div class="form-group">
+                        <input type="email" name="email" placeholder="Your Email" required>
+                    </div>
+                    <div class="form-group">
+                        <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
+                    </div>
+                    <button type="submit" class="submit-btn">Send Message</button>
+                </form>
+            </div>
+        </div>
+
+        <!-- Footer Bottom -->
+        <div class="footer-bottom">
+            <p>&copy; 2024 Assy Jean-Claude EDDY. All rights reserved.</p>
+        </div>
+    </footer>
 
     <!-- Script for dark mode functionality -->
     <script>
