--- a/html.html
+++ b/html.html
@@ -20,7 +20,7 @@
 <body>
     <header>
         <div class="container">
-            <header class="header-container">
+            <div class="header-container">
                 <label for="check" class="logo"><a href="index.html">AJC EDDY</a></label>
                 <nav>
                     <ul class="menu">
@@ -35,101 +35,98 @@
                         </div>
                     </ul>
                 </nav>
-            </header>
+            </div>
         </div>
     </header>
 
     <div class="maindiv">
         <!-- Main title -->
         <div class="titlediv1">
-            <h1 class="titleh1">Assy J-C EDDY's <br> portfolio</h1>  
+            <h1 class="titleh1">Assy J-C EDDY's <br> Portfolio</h1>  
         </div>
-<!-- Image section -->
-<div class="body-image">
-    <img src="1.jpg" alt="Portfolio Image">
-</div>
 
-<!-- Body text section -->
-<div class="body-text">
-    <div class="titlediv1">
-        <h1 class="titleh1">HTML Skills</h1>
-    </div>
-    <br>
-    <div class="cardtext cardtext1">
-        <h1>HTML</h1>
-        <p>As a proficient software developer, I possess a strong command of HTML (Hypertext Markup Language), the backbone of web development. I excel in crafting semantic, accessible, and responsive web pages that enhance user experience across various devices. My expertise includes:
+        <!-- Image section -->
+        <div class="body-image">
+            <img src="1.jpg" alt="Portfolio showcase image">
+        </div>
+
+        <!-- Body text section -->
+        <div class="body-text">
+            <div class="titlediv1">
+                <h1 class="titleh1">HTML Skills</h1>
+            </div>
             <br>
-
-            HTML5 Standards: Utilization of the latest HTML5 features, ensuring compliance with web standards and best practices. <br>
-            Semantic Markup: Implementing meaningful elements and attributes to improve SEO and accessibility. <br>
-            Responsive Design: Creating adaptive layouts using flexible structures that cater to diverse screen sizes and resolutions. <br>
-            Integration with CSS and JavaScript: Collaborating with CSS for styling and JavaScript for interactivity, resulting in dynamic and visually appealing applications. <br>
-            Cross-Browser Compatibility: Ensuring consistent performance and appearance across different browsers and platforms.
-            With a keen eye for detail and a passion for building user-friendly interfaces, I leverage HTML to deliver robust web solutions that meet client needs and drive engagement.</p>
+            <div class="cardtext cardtext1">
+                <h1>HTML</h1>
+                <p>
+                    As a proficient software developer, I possess a strong command of HTML (Hypertext Markup Language), the backbone of web development. I excel in crafting semantic, accessible, and responsive web pages that enhance user experience across various devices. My expertise includes:
+                    <br>
+                    <strong>HTML5 Standards</strong>: Utilizing the latest HTML5 features, ensuring compliance with web standards and best practices. <br>
+                    <strong>Semantic Markup</strong>: Implementing meaningful elements and attributes to improve SEO and accessibility. <br>
+                    <strong>Responsive Design</strong>: Creating adaptive layouts using flexible structures that cater to diverse screen sizes and resolutions. <br>
+                    <strong>Integration with CSS and JavaScript</strong>: Collaborating with CSS for styling and JavaScript for interactivity, resulting in dynamic and visually appealing applications. <br>
+                    <strong>Cross-Browser Compatibility</strong>: Ensuring consistent performance and appearance across different browsers and platforms.
+                    <br><br>
+                    With a keen eye for detail and a passion for building user-friendly interfaces, I leverage HTML to deliver robust web solutions that meet client needs and drive engagement.
+                </p>
+            </div>
+        </div>
     </div>
-</div>
-</div>
 
+    <!-- Footer Section -->
+    <footer class="footer">
+        <div class="container">
+            <!-- Footer Contact Details -->
+            <div class="footer-contact">
+                <h2>Contact Me</h2>
+                <p><strong>Name:</strong> Assy Jean-Claude EDDY</p>
+                <p><strong>Phone:</strong> +44 7 42 42 42 793</p>
+                <p><strong>Email:</strong> <a href="mailto:ajceddy@gmail.com">ajceddy@gmail.com</a></p>
+                <a aria-label="Chat on WhatsApp" href="https://wa.me/00447424242793">
+                    <img alt="Chat on WhatsApp" src="WhatsAppButtonGreenLarge.png" />
+                </a>
+            </div>
 
-
-   
-
-<!-- Footer Section -->
-<footer class="footer">
-<div class="container">
-<!-- Footer Contact Details -->
-<div class="footer-contact">
-    <h2>Contact Me</h2>
-    <p><strong>Name:</strong> Assy Jean-Claude EDDY</p>
-    <p><strong>Phone:</strong> +44 7 42 42 42 793</p>
-    <p><strong>Email:</strong> <a href="mailto:ajceddy@gmail.com">ajceddy@gmail.com</a></p>
-    <a aria-label="Chat on WhatsApp" href="https://wa.me/00447424242793"> <img alt="Chat on WhatsApp" src="WhatsAppButtonGreenLarge.png"/><a/>
-</div>
-
-<!-- Footer Contact Form -->
-<div class="footer-form">
-    <h2>Get In Touch</h2>
-    <form action="#" method="POST">
-        <div class="form-group">
-            <input type="text" name="name" placeholder="Your Name" required>
+            <!-- Footer Contact Form -->
+            <div class="footer-form">
+                <h2>Get In Touch</h2>
+                <form action="#" method="POST">
+                    <div class="form-group">
+                        <input type="text" name="name" placeholder="Your Name" required>
+                    </div>
+                    <div class="form-group">
+                        <input type="email" name="email" placeholder="Your Email" required>
+                    </div>
+                    <div class="form-group">
+                        <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
+                    </div>
+                    <button type="submit" class="submit-btn">Send Message</button>
+                </form>
+            </div>
         </div>
-        <div class="form-group">
-            <input type="email" name="email" placeholder="Your Email" required>
+
+        <!-- Footer Bottom -->
+        <div class="footer-bottom">
+            <p>&copy; 2024 Assy Jean-Claude EDDY. All rights reserved.</p>
         </div>
-        <div class="form-group">
-            <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
-        </div>
-        <button type="submit" class="submit-btn">Send Message</button>
-    </form>
-</div>
-</div>
+    </footer>
 
-<!-- Footer Bottom -->
-<div class="footer-bottom">
-<p>&copy; 2024 Assy Jean-Claude EDDY. All rights reserved.</p>
-</div>
-</footer>
+    <!-- Script for dark mode functionality -->
+    <script>
+        const themeSwitch = document.getElementById('theme-switch');
+        themeSwitch.addEventListener('change', () => {
+            document.body.classList.toggle('dark-mode'); // Toggle dark mode class
+            localStorage.setItem('theme', document.body.classList.contains('dark-mode') ? 'dark' : 'light'); // Save the theme preference
+        });
 
-<!-- Script for dark mode functionality -->
-<script>
-const themeSwitch = document.getElementById('theme-switch');
-themeSwitch.addEventListener('change', () => {
-    document.body.classList.toggle('dark-mode'); // Toggle dark mode class
-    localStorage.setItem('theme', document.body.classList.contains('dark-mode') ? 'dark' : 'light'); // Save the theme preference
-});
-
-// Load the preferred theme on page load
-window.onload = () => {
-    const savedTheme = localStorage.getItem('theme');
-    if (savedTheme === 'dark') {
-        document.body.classList.add('dark-mode'); // Apply dark mode if saved
-        themeSwitch.checked = true; // Check the toggle
-    }
-};
-</script>
-</body>
-</html>
-
-    
+        // Load the preferred theme on page load
+        window.onload = () => {
+            const savedTheme = localStorage.getItem('theme');
+            if (savedTheme === 'dark') {
+                document.body.classList.add('dark-mode'); // Apply dark mode if saved
+                themeSwitch.checked = true; // Check the toggle
+            }
+        };
+    </script>
 </body>
 </html>
