--- a/index.html
+++ b/index.html
@@ -48,35 +48,38 @@
 
     <!-- Main Content Section -->
     <div class="maindiv">
-        <!-- Main title -->
-        <div class="titlediv1">
-            <h1 class="titleh1">Assy J-C EDDY's <br> portfolio</h1>  
-        </div>
 
+        <!--Image, title and soft dev container-->
         <!-- Image section -->
         <div class="body-image">
-            <!-- Portfolio image -->
-            <img src="AdobeStock_373478211.jpg" alt="Portfolio Image" loading="lazy">
-        </div>
+            <!-- Main title -->
+            <div class="titlediv1">
+                <h1 class="titleh1">Assy J-C EDDY's <br> portfolio</h1> 
+            </div>
+            <!-- Body text section -->
+            <div class="body-text">
+                <h1>SOFTWARE DEVELOPER</h1>
+                <br>
+                <p>
+                    I am Assy Jean-Claude Eddy, a Full-Stack Software Developer with a proven track record of delivering innovative, scalable, and high-performance solutions. With many years of hands-on experience in both front-end and back-end development, I specialize in building dynamic applications that meet modern business needs.
+                </p>
+                <br>
+                <p>
+                    I am proficient in a wide range of technologies, including JavaScript frameworks (React, Angular, Vue), server-side development (Node.js, Python/Django), and cloud services (AWS, Azure). Whether you're looking for web, mobile, or custom software, I combine technical expertise with a keen eye for design and user experience to create solutions that stand out.
+                </p>
+                <br>
+                <p>
+                    Explore my portfolio to see how I’ve helped clients achieve their digital transformation goals. Let’s work together to turn your vision into reality.
+                </p>
+                <br>
 
-        <!-- Body text section -->
-        <div class="body-text">
-            <h1>SOFTWARE DEVELOPER</h1>
-            <br>
-            <p>
-                I am Assy Jean-Claude Eddy, a Full-Stack Software Developer with a proven track record of delivering innovative, scalable, and high-performance solutions. With many years of hands-on experience in both front-end and back-end development, I specialize in building dynamic applications that meet modern business needs.
-            </p>
-            <br>
-            <p>
-                I am proficient in a wide range of technologies, including JavaScript frameworks (React, Angular, Vue), server-side development (Node.js, Python/Django), and cloud services (AWS, Azure). Whether you're looking for web, mobile, or custom software, I combine technical expertise with a keen eye for design and user experience to create solutions that stand out.
-            </p>
-            <br>
-            <p>
-                Explore my portfolio to see how I’ve helped clients achieve their digital transformation goals. Let’s work together to turn your vision into reality.
-            </p>
-            <br>
+            </div>
 
-        </div>
+
+         </div>
+
+            
+    </div>
 
         <!-- Core Skills Section -->
         <div class="titlediv1">
