--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <!-- Title container -->
     <div class="titlediv1">
         <!-- Main title of the page -->
-        <h1 class="titleh1">Assy J-C EDDY's <br> SOFTWARE DEVELOPER</h1> 
+        <h1 class="titleh1">SOFTWARE DEVELOPER</h1> 
     </div>
     
     <!-- Body text section -->
