--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
     <!-- Google Fonts for custom font usage -->
     <link href="https://fonts.googleapis.com/css2?family=Sixtyfour+Convergence&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -64,11 +65,9 @@
 
                 <!-- Short introduction about the developer -->
                 <p class="body-image-p">
-                    I’m Assy Jean-Claude Eddy, a Full-Stack Software Developer skilled in building innovative, scalable, and high-performance applications. With expertise in both front-end (React, Angular, Vue) and back-end development (Node.js, Python/Django).
-                    <br><br>
-                    I deliver solutions that meet modern business needs. Whether it’s web, mobile, or custom software, I blend technical expertise with a focus on design and user experience to create impactful results.
-                    <br><br>
-                    Check out my portfolio to see how I’ve helped clients achieve their goals. Let’s bring your vision to life.
+                    I'm Assy Jean-Claude Eddy, a Full-Stack Developer skilled in building scalable, high-performance applications. I specialize in front-end (React, Angular, Vue) and back-end (Node.js, Python/Django) development. <br>
+                    <br>
+                    I deliver modern, user-focused solutions for web, mobile, and custom software. Check out my portfolio to see how I help clients achieve their goals. Let’s bring your vision to <br>
                 </p>
                 <!-- Spacer line for aesthetics -->
                 <br>
