--- a/html.html
+++ b/html.html
@@ -65,9 +65,9 @@
 
                 <!-- Short introduction about the developer -->
                 <p class="body-image-p">
-                    Skilled in building scalable, high-performance applications. With expertise in front-end (React, Angular, Vue) and back-end (Node.js, Python/Django), I deliver solutions for modern business needs. <br>
+                    Expert in HTML, skilled at structuring clean, semantic, and accessible code. I ensure web content is well-organized and SEO-friendly. <br>
                     <br>
-                    I combine technical skills with a focus on design and user experience to create impactful results. Check out my portfolio to see how I’ve helped clients achieve their goals.
+                    Proficient in using HTML5 features, forms, and multimedia elements, I build responsive layouts that work across devices. My HTML skills help create solid foundations for engaging and efficient web applications. <br>
                 </p>
                 <!-- Spacer line for aesthetics -->
                 <br>
