--- a/css.html
+++ b/css.html
@@ -81,7 +81,7 @@
 
         <!-- Core Skills Section -->
         <div class="titlediv1">
-            <h1 class="titleh1">Core Skills</h1>
+            <h1 class="titleh1">Other Core Skills</h1>
         </div> 
 
         <!-- Card container for skills -->
