--- a/css.html
+++ b/css.html
@@ -81,7 +81,7 @@
 
         <!-- Core Skills Section -->
         <div class="titlediv1">
-            <h1 class="titleh1">Other Core Skills</h1>
+            <h1 class="titleh1">Core Skills</h1>
         </div> 
 
         <!-- Card container for skills -->
@@ -97,15 +97,6 @@
                 <a href="html.html" target="_blank" rel="noopener noreferrer"><button class="read-more">Read more</button></a>
             </div>
 
-            <!-- Individual skill card - CSS -->
-            <div class="card card2">
-                <img src="2.jpg" alt="CSS skills image" loading="lazy">
-                <div class="cardtext cardtext2">
-                    <h1>CSS</h1>
-                    <p>As a skilled software developer, I have extensive expertise in CSS (Cascading Style Sheets), enabling me to create visually engaging and responsive web designs. My proficiency includes:</p>
-                </div>
-                <a href="css.html" target="_blank" rel="noopener noreferrer"><button class="read-more">Read more</button></a>
-            </div>
 
             <!-- Individual skill card - JavaScript -->
             <div class="card card3">
