--- a/comptia.html
+++ b/comptia.html
@@ -3,224 +3,230 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>COMPTIA - Assy J-C EDDY</title>
+    <title>COMPTIA A+ - Assy J-C EDDY</title>
 
-    <!-- Link to external CSS file -->
+    <!-- Meta description for SEO (improves search engine ranking) -->
+    <meta name="description" content="Assy Jean-Claude Eddy, Full-Stack Software Developer offering web, mobile, and custom software development solutions. Explore my portfolio.">
+
+    <!-- Link to external CSS file for styling -->
     <link rel="stylesheet" href="style.css">
 
-    <!-- Font Awesome for icons -->
+    <!-- Favicon for the site (32x32 for optimal resolution in most browsers) -->
+    <link rel="icon" type="image/png" href="favicon-32x32.png">
+
+    <!-- Font Awesome for icons (used in the contact section for icons like phone and email) -->
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 
-    <!-- Google Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <!-- Preconnect to Google Fonts for faster loading -->
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Cascadia+Code&display=swap" rel="stylesheet">
+
+    <!-- Google Fonts for custom font usage -->
     <link href="https://fonts.googleapis.com/css2?family=Sixtyfour+Convergence&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
 </head>
 <body>
+
+    <!-- Background gradient effect for aesthetic appeal -->
+    <div class="gradient"></div>
+
+    <!-- Header section that contains the logo and navigation -->
     <header>
         <div class="container">
             <header class="header-container">
+                <!-- Logo with a link back to the home page -->
                 <label for="check" class="logo"><a href="index.html">AJC EDDY</a></label>
                 <nav>
+                    <!-- Navigation menu links -->
                     <ul class="menu">
                         <li><a href="downloadcv.html">Download CV</a></li>
                         <li><a href="contact.html">Contact</a></li>
-                        <!-- Dark Mode Toggle -->
-                        <div class="theme-toggle">
-                            <input type="checkbox" id="theme-switch">
-                            <label for="theme-switch" class="toggle-label">
-                                <i class="fas fa-moon"></i> Dark Mode
-                            </label>
-                        </div>
                     </ul>
+                    <!-- Dark Mode Toggle switch -->
+                    <div class="theme-toggle">
+                        <input type="checkbox" id="theme-switch">
+                        <label for="theme-switch" class="toggle-label" aria-label="Toggle dark mode">
+                            <!-- Font Awesome icon for moon (dark mode indicator) -->
+                            <i class="fas fa-moon"></i> Dark Mode
+                        </label>
+                    </div>
                 </nav>
             </header>
         </div>
     </header>
 
+    <!-- Main content container -->
     <div class="maindiv">
-        <!-- Main title -->
-        <div class="titlediv1">
-            <h1 class="titleh1">Assy J-C EDDY's <br> portfolio</h1>  
+
+        <!-- Container for the hero section (title and introduction) -->
+        <div class="body-image">
+            <div class="titlediv1">
+                <!-- Main title (developer name and title) -->
+                <h1 class="titleh1">COMPTIA A+</h1>
+
+                <!-- Short introduction about the developer -->
+                <p class="body-image-p">
+                    Skilled in IT fundamentals with a CompTIA A+ certification, covering hardware, software, and network troubleshooting. Proficient in diagnosing and resolving technical issues, maintaining computer systems, and setting up devices. 
+                    <br>
+                    <br>
+                    Experienced with operating systems (Windows, macOS, Linux) and familiar with common IT infrastructure. Strong understanding of security practices, software installation, and system upgrades. <br>
+                </p>
+                <!-- Spacer line for aesthetics -->
+                <br>
+            </div>
         </div>
-<!-- Image section -->
-<div class="body-image">
-    <img src="7.jpg" alt="Portfolio Image">
-</div>
 
-<!-- Body text section -->
-<div class="body-text">
-    <div class="titlediv1">
-        <h1 class="titleh1">COMPTIA</h1>
     </div>
-    <br>
-    <div class="cardtext cardtext1">
-            <p>As a proficient software developer, I possess a strong command of HTML (Hypertext Markup Language), the backbone of web development. I excel in crafting semantic, accessible, and responsive web pages that enhance user experience across various devices. My expertise includes:
-            <br>
 
-            HTML5 Standards: Utilization of the latest HTML5 features, ensuring compliance with web standards and best practices. <br>
-            Semantic Markup: Implementing meaningful elements and attributes to improve SEO and accessibility. <br>
-            Responsive Design: Creating adaptive layouts using flexible structures that cater to diverse screen sizes and resolutions. <br>
-            Integration with CSS and JavaScript: Collaborating with CSS for styling and JavaScript for interactivity, resulting in dynamic and visually appealing applications. <br>
-            Cross-Browser Compatibility: Ensuring consistent performance and appearance across different browsers and platforms.
-            With a keen eye for detail and a passion for building user-friendly interfaces, I leverage HTML to deliver robust web solutions that meet client needs and drive engagement.</p>
-    </div>
-</div>
-</div>
+    <!-- Section for core skills (with cards for each skill) -->
+    <div>
+
+        <!-- Core Skills Section -->
+        <div class="titlediv1">
+            <h1 class="titleh1">Other Core Skills</h1>
+        </div> 
 
         <!-- Card container for skills -->
         <div class="card-container">
 
-            <!-- Individual cards 
+            <!-- Individual skill card - HTML -->
             <div class="card card1">
-                <img src="1.jpg" alt="HTML">
+                <img src="1.jpg" alt="HTML skills image" loading="lazy">
                 <div class="cardtext cardtext1">
                     <h1>HTML</h1>
                     <p>As a proficient software developer, I possess a strong command of HTML (Hypertext Markup Language), the backbone of web development. I excel in crafting semantic, accessible, and responsive web pages that enhance user experience across various devices. My expertise includes:</p>
                 </div>
-                <a href="html.html"><button class="read-more">Read more</button></a>
+                <a href="html.html" target="_blank" rel="noopener noreferrer"><button class="read-more">Read more</button></a>
             </div>
-            -->
 
-
+            <!-- Individual skill card - CSS -->
             <div class="card card2">
-                <img src="2.jpg" alt="CSS">
+                <img src="2.jpg" alt="CSS skills image" loading="lazy">
                 <div class="cardtext cardtext2">
                     <h1>CSS</h1>
                     <p>As a skilled software developer, I have extensive expertise in CSS (Cascading Style Sheets), enabling me to create visually engaging and responsive web designs. My proficiency includes:</p>
                 </div>
-                <a href="css.html"><button class="read-more">Read more</button></a>
+                <a href="css.html" target="_blank" rel="noopener noreferrer"><button class="read-more">Read more</button></a>
             </div>
 
-
+            <!-- Individual skill card - JavaScript -->
             <div class="card card3">
-                <img src="3.jpg" alt="JavaScript">
+                <img src="3.jpg" alt="JavaScript skills image" loading="lazy">
                 <div class="cardtext cardtext3">
                     <h1>JAVASCRIPT</h1>
                     <p>As a proficient software developer, I have a strong command of JavaScript, empowering me to create dynamic and interactive web applications. My expertise encompasses:</p>
                 </div>
-                <a href="javascript.html"><button class="read-more">Read more</button></a>
+                <a href="javascript.html" target="_blank" rel="noopener noreferrer"><button class="read-more">Read more</button></a>
             </div>
 
+            <!-- Individual skill card - Python -->
             <div class="card card4">
-                <img src="4.jpg" alt="Python">
+                <img src="4.jpg" alt="Python skills image" loading="lazy">
                 <div class="cardtext cardtext4">
                     <h1>PYTHON</h1>
                     <p>As a skilled software developer, I possess extensive experience in Python, a versatile and powerful programming language that enables me to build robust applications across various domains. My expertise includes:</p>
                 </div>
-                <a href="python.html"><button class="read-more">Read more</button></a>
+                <a href="python.html" target="_blank" rel="noopener noreferrer"><button class="read-more">Read more</button></a>
             </div>
 
-
+            <!-- Individual skill card - Cybersecurity -->
             <div class="card card5">
-                <img src="5.jpeg" alt="Cyber Security">
+                <img src="5.jpeg" alt="Cybersecurity skills image" loading="lazy">
                 <div class="cardtext cardtext5">
                     <h1>CYBER SECURITY</h1>
                     <p>As a dedicated software developer with a strong focus on cybersecurity, I possess a comprehensive understanding of securing applications and systems against a variety of threats. My expertise includes:</p>
                 </div>
-                <a href="cybersecurity.html"><button class="read-more">Read more</button></a>
+                <a href="cybersecurity.html" target="_blank" rel="noopener noreferrer"><button class="read-more">Read more</button></a>
             </div>
 
+            <!-- Individual skill card - Network -->
             <div class="card card6">
-                <img src="6.jpg" alt="Network">
+                <img src="6.jpg" alt="Network skills image" loading="lazy">
                 <div class="cardtext cardtext6">
                     <h1>NETWORK</h1>
-                    <p>As a dedicated software developer with a strong focus on cybersecurity, I possess a comprehensive understanding of securing applications and systems against a variety of threats. My expertise includes:</p>
+                    <p>As a dedicated software developer with a strong focus on network administration, I possess a comprehensive understanding of network protocols and configurations. My expertise includes:</p>
                 </div>
-                <a href="network.html"><button class="read-more">Read more</button></a>
+                <a href="network.html" target="_blank" rel="noopener noreferrer"><button class="read-more">Read more</button></a>
             </div>
 
-            <div class="card card7">
-                <img src="7.jpg" alt="comptia">
-                <div class="cardtext cardtext7">
-                    <h1>COMPTIA+</h1>
-                    <p>As a dedicated software developer with a strong focus on cybersecurity, I possess a comprehensive understanding of securing applications and systems against a variety of threats. My expertise includes:</p>
-                </div>
-                <a href="comptia.html"><button class="read-more">Read more</button></a>
-            </div>
 
+            <!-- Individual skill card - C++ -->
             <div class="card card8">
-                <img src="8.jpg" alt="Cplus">
-                <div class="cardtext cardtext5">
+                <img src="8.jpg" alt="C++ skills image" loading="lazy">
+                <div class="cardtext cardtext8">
                     <h1>C++</h1>
-                    <p>As a dedicated software developer with a strong focus on cybersecurity, I possess a comprehensive understanding of securing applications and systems against a variety of threats. My expertise includes:</p>
+                    <p>As a dedicated software developer, I have comprehensive experience in C++, a powerful programming language used for high-performance applications. My expertise includes:</p>
                 </div>
-                <a href="cplus.html"><button class="read-more">Read more</button></a>
+                <a href="cplus.html" target="_blank" rel="noopener noreferrer"><button class="read-more">Read more</button></a>
             </div>
 
-
+            <!-- Individual skill card - Other Skills -->
             <div class="card card9">
-                <img src="9.jpg" alt="Other Skills">
+                <img src="9.jpg" alt="Other Skills image" loading="lazy">
                 <div class="cardtext cardtext9">
                     <h1>OTHER SKILLS</h1>
                     <p>1. Full-Stack Web Development <br> 2. API Integration and Microservices <br> 3. Cloud Infrastructure and DevOps <br> 4. Agile Methodologies and Project Management</p>
-                                 </div>
-                 <a href="otherskills.html"><button class="read-more">Read more</button></a>
+                </div>
+                <a href="otherskills.html" target="_blank" rel="noopener noreferrer"><button class="read-more">Read more</button></a>
             </div>
         </div>
     </div>    
 
+    <!-- Footer Section -->
+    <footer class="footer">
+        <div class="contact-container">
+            <!-- Contact Information -->
+            <div class="contact-info">
+                <h2>Contact Details</h2>
+                <p><i class="fas fa-user"></i> <strong>Name:</strong> Assy Jean-Claude EDDY</p>
+                <p><i class="fas fa-phone"></i> <strong>Phone:</strong> +44 7 42 42 42 793</p>
+                <p><i class="fas fa-envelope"></i> <strong>Email:</strong> <a href="mailto:ajceddy@gmail.com">ajceddy@gmail.com</a></p>
+                <p><i class="fas fa-map-marker-alt"></i> <strong>Location:</strong> Wolverhampton, United Kingdom</p>
+                
+            </div>
 
-   
-
-<!-- Footer Section -->
-<footer class="footer">
-<div class="container">
-<!-- Footer Contact Details -->
-<div class="footer-contact">
-    <h2>Contact Me</h2>
-    <p><strong>Name:</strong> Assy Jean-Claude EDDY</p>
-    <p><strong>Phone:</strong> +44 7 42 42 42 793</p>
-    <p><strong>Email:</strong> <a href="mailto:ajceddy@gmail.com">ajceddy@gmail.com</a></p>
-    <script src="https://static.elfsight.com/platform/platform.js" async></script>
-<div class="elfsight-app-10d3ab95-1a10-405e-a13c-2d31a8f231d9" data-elfsight-app-lazy></div>
-</div>
-
-<!-- Footer Contact Form -->
-<div class="footer-form">
-    <h2>Get In Touch</h2>
-    <form action="#" method="POST">
-        <div class="form-group">
-            <input type="text" name="name" placeholder="Your Name" required>
+            <!-- Contact Form -->
+            <div class="contact-form">
+                <h2>Send a Message</h2>
+                <form action="#" method="POST">
+                    <div class="form-group">
+                        <input type="text" name="name" placeholder="Your Name" required>
+                    </div>
+                    <div class="form-group">
+                        <input type="email" name="email" placeholder="Your Email" required>
+                    </div>
+                    <div class="form-group">
+                        <textarea name="message" rows="6" placeholder="Your Message" required></textarea>
+                    </div>
+                    <button type="submit" class="submit-btn">Send Message</button>
+                </form>
+            </div>
         </div>
-        <div class="form-group">
-            <input type="email" name="email" placeholder="Your Email" required>
+
+        <!-- Footer Bottom with copyright notice -->
+        <div class="footer-bottom">
+            <p>&copy; 2024 Assy Jean-Claude EDDY. All rights reserved.</p>
         </div>
-        <div class="form-group">
-            <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
-        </div>
-        <button type="submit" class="submit-btn">Send Message</button>
-    </form>
-</div>
-</div>
+    </footer>
 
-<!-- Footer Bottom -->
-<div class="footer-bottom">
-<p>&copy; 2024 Assy Jean-Claude EDDY. All rights reserved.</p>
-</div>
-</footer>
+    <!-- Script for dark mode functionality -->
+    <script>
+        const themeSwitch = document.getElementById('theme-switch');
+        // Add event listener for the dark mode toggle
+        themeSwitch.addEventListener('change', () => {
+            document.body.classList.toggle('dark-mode'); // Toggle dark mode class
+            // Save the theme preference to local storage
+            localStorage.setItem('theme', document.body.classList.contains('dark-mode') ? 'dark' : 'light'); 
+        });
 
-<!-- Script for dark mode functionality -->
-<script>
-const themeSwitch = document.getElementById('theme-switch');
-themeSwitch.addEventListener('change', () => {
-    document.body.classList.toggle('dark-mode'); // Toggle dark mode class
-    localStorage.setItem('theme', document.body.classList.contains('dark-mode') ? 'dark' : 'light'); // Save the theme preference
-});
+        // Load the preferred theme on page load
+        window.onload = () => {
+            const savedTheme = localStorage.getItem('theme');
+            if (savedTheme === 'dark') {
+                document.body.classList.add('dark-mode'); // Apply dark mode if saved
+                themeSwitch.checked = true; // Check the toggle
+            }
+        };
+    </script>
 
-// Load the preferred theme on page load
-window.onload = () => {
-    const savedTheme = localStorage.getItem('theme');
-    if (savedTheme === 'dark') {
-        document.body.classList.add('dark-mode'); // Apply dark mode if saved
-        themeSwitch.checked = true; // Check the toggle
-    }
-};
-</script>
-</body>
-</html>
-
-    
 </body>
 </html>
