--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
         <div class="body-image">
             <div class="titlediv1">
                 <!-- Main title (developer name and title) -->
-                <h1 class="titleh1">Assy J-C EDDY<br> SOFTWARE DEVELOPER</h1>
+                <h1 class="titleh1">Assy J-C EDDY<br> 
+                    <br>SOFTWARE DEVELOPER</h1>
 
                 <!-- Short introduction about the developer -->
                 <p class="body-image-p">
