--- a/css.html
+++ b/css.html
@@ -30,29 +30,30 @@
     <div class="gradient"></div>
 
     <!-- Header section that contains the logo and navigation -->
-    <header>
-        <div class="container">
-            <header class="header-container">
-                <!-- Logo with a link back to the home page -->
-                <label for="check" class="logo"><a href="index.html">AJC EDDY</a></label>
-                <nav>
-                    <!-- Navigation menu links -->
-                    <ul class="menu">
-                        <li><a href="downloadcv.html">Download CV</a></li>
-                        <li><a href="contact.html">Contact</a></li>
-                    </ul>
-                    <!-- Dark Mode Toggle switch -->
-                    <div class="theme-toggle">
-                        <input type="checkbox" id="theme-switch">
-                        <label for="theme-switch" class="toggle-label" aria-label="Toggle dark mode">
-                            <!-- Font Awesome icon for moon (dark mode indicator) -->
-                            <i class="fas fa-moon"></i> Dark Mode
-                        </label>
-                    </div>
-                </nav>
-            </header>
-        </div>
-    </header>
+ <!-- Header section that contains the logo and navigation -->
+ <header>
+    <div class="container">
+        <header class="header-container">
+            <!-- Logo with a link back to the home page -->
+            <label for="check" class="logo"><a href="index.html">AJC EDDY</a></label>
+            <nav>
+                <!-- Navigation menu links -->
+                <ul class="menu">
+                    <li><a href="downloadcv.html">Download CV</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+                <!-- Dark Mode Toggle switch -->
+                <div class="theme-toggle">
+                    <input type="checkbox" id="theme-switch">
+                    <label for="theme-switch" class="toggle-label" aria-label="Toggle dark mode">
+                        <!-- Font Awesome icon for moon (dark mode indicator) -->
+                        <i class="fas fa-moon"></i> Dark Mode
+                    </label>
+                </div>
+            </nav>
+        </header>
+    </div>
+</header>
 
     <!-- Main content container -->
     <div class="maindiv">
@@ -81,12 +82,13 @@
 
         <!-- Core Skills Section -->
         <div class="titlediv1">
-            <h1 class="titleh1">Core Skills</h1>
+            <h1 class="titleh1">Other Core Skills</h1>
         </div> 
 
         <!-- Card container for skills -->
         <div class="card-container">
 
+            
             <!-- Individual skill card - HTML -->
             <div class="card card1">
                 <img src="1.jpg" alt="HTML skills image" loading="lazy">
@@ -94,9 +96,8 @@
                     <h1>HTML</h1>
                     <p>As a proficient software developer, I possess a strong command of HTML (Hypertext Markup Language), the backbone of web development. I excel in crafting semantic, accessible, and responsive web pages that enhance user experience across various devices. My expertise includes:</p>
                 </div>
-                <a href="html.html" target="_blank" rel="noopener noreferrer"><button class="read-more">Read more</button></a>
+                <a href="html.html" class="read-more"><button class="button">Read more</button></a>
             </div>
-
 
             <!-- Individual skill card - JavaScript -->
             <div class="card card3">
@@ -105,8 +106,9 @@
                     <h1>JAVASCRIPT</h1>
                     <p>As a proficient software developer, I have a strong command of JavaScript, empowering me to create dynamic and interactive web applications. My expertise encompasses:</p>
                 </div>
-                <a href="javascript.html" target="_blank" rel="noopener noreferrer"><button class="read-more">Read more</button></a>
+                <a href="javascript.html" class="read-more"><button class="button">Read more</button></a>
             </div>
+
 
             <!-- Individual skill card - Python -->
             <div class="card card4">
@@ -115,9 +117,44 @@
                     <h1>PYTHON</h1>
                     <p>As a skilled software developer, I possess extensive experience in Python, a versatile and powerful programming language that enables me to build robust applications across various domains. My expertise includes:</p>
                 </div>
-                <a href="python.html" target="_blank" rel="noopener noreferrer"><button class="read-more">Read more</button></a>
+                <a href="python.html" class="read-more"><button class="button">Read more</button></a>
             </div>
 
+
+            <!-- Individual skill card - Network -->
+            <div class="card card6">
+                <img src="6.jpg" alt="Network skills image" loading="lazy">
+                <div class="cardtext cardtext6">
+                    <h1>NETWORK</h1>
+                    <p>As a dedicated software developer with a strong focus on network administration, I possess a comprehensive understanding of network protocols and configurations. My expertise includes:</p>
+                </div>
+                <a href="network.html" class="read-more"><button class="button">Read more</button></a>
+            </div>
+
+
+            <!-- Individual skill card - Comptia+ -->
+            <div class="card card7">
+                <img src="7.jpg" alt="Comptia+ skills image" loading="lazy">
+                <div class="cardtext cardtext7">
+                    <h1>COMPTIA+</h1>
+                    <p>As a certified professional, I have comprehensive knowledge of the Comptia+ curriculum, focusing on IT infrastructure and networking. My expertise includes:</p>
+                </div>
+                <a href="comptia.html" class="read-more"><button class="button">Read more</button></a>
+            </div>
+
+
+
+            <!-- Individual skill card - C++ -->
+            <div class="card card8">
+                <img src="8.jpg" alt="C++ skills image" loading="lazy">
+                <div class="cardtext cardtext8">
+                    <h1>C++</h1>
+                    <p>As a dedicated software developer, I have comprehensive experience in C++, a powerful programming language used for high-performance applications. My expertise includes:</p>
+                </div>
+                <a href="cplus.html" class="read-more"><button class="button">Read more</button></a>
+            </div>
+
+            
             <!-- Individual skill card - Cybersecurity -->
             <div class="card card5">
                 <img src="5.jpeg" alt="Cybersecurity skills image" loading="lazy">
@@ -128,35 +165,7 @@
                 <a href="cybersecurity.html" target="_blank" rel="noopener noreferrer"><button class="read-more">Read more</button></a>
             </div>
 
-            <!-- Individual skill card - Network -->
-            <div class="card card6">
-                <img src="6.jpg" alt="Network skills image" loading="lazy">
-                <div class="cardtext cardtext6">
-                    <h1>NETWORK</h1>
-                    <p>As a dedicated software developer with a strong focus on network administration, I possess a comprehensive understanding of network protocols and configurations. My expertise includes:</p>
-                </div>
-                <a href="network.html" target="_blank" rel="noopener noreferrer"><button class="read-more">Read more</button></a>
-            </div>
 
-            <!-- Individual skill card - Comptia+ -->
-            <div class="card card7">
-                <img src="7.jpg" alt="Comptia+ skills image" loading="lazy">
-                <div class="cardtext cardtext7">
-                    <h1>COMPTIA+</h1>
-                    <p>As a certified professional, I have comprehensive knowledge of the Comptia+ curriculum, focusing on IT infrastructure and networking. My expertise includes:</p>
-                </div>
-                <a href="comptia.html" target="_blank" rel="noopener noreferrer"><button class="read-more">Read more</button></a>
-            </div>
-
-            <!-- Individual skill card - C++ -->
-            <div class="card card8">
-                <img src="8.jpg" alt="C++ skills image" loading="lazy">
-                <div class="cardtext cardtext8">
-                    <h1>C++</h1>
-                    <p>As a dedicated software developer, I have comprehensive experience in C++, a powerful programming language used for high-performance applications. My expertise includes:</p>
-                </div>
-                <a href="cplus.html" target="_blank" rel="noopener noreferrer"><button class="read-more">Read more</button></a>
-            </div>
 
             <!-- Individual skill card - Other Skills -->
             <div class="card card9">
@@ -165,9 +174,11 @@
                     <h1>OTHER SKILLS</h1>
                     <p>1. Full-Stack Web Development <br> 2. API Integration and Microservices <br> 3. Cloud Infrastructure and DevOps <br> 4. Agile Methodologies and Project Management</p>
                 </div>
-                <a href="otherskills.html" target="_blank" rel="noopener noreferrer"><button class="read-more">Read more</button></a>
+                <a href="otherskills.html" class="read-more"><button class="button">Read more</button></a>
             </div>
+
         </div>
+
     </div>    
 
     <!-- Footer Section -->
