--- a/downloadcv.html
+++ b/downloadcv.html
@@ -1,61 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
 
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>CV - Assy J-C EDDY</title>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>CV - Assy J-C EDDY</title>
 
-        <!-- Link to external CSS file -->
-        <link rel="stylesheet" href="style.css">
+    <!-- Link to external CSS file -->
+    <link rel="stylesheet" href="style.css">
 
-        <!-- Font Awesome for icons -->
-        <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+    <!-- Font Awesome for icons -->
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 
-        <!-- Google Fonts -->
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Cascadia+Code&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Sixtyfour+Convergence&display=swap" rel="stylesheet">
-    </head>
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cascadia+Code&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Sixtyfour+Convergence&display=swap" rel="stylesheet">
+</head>
 
 <body>
-    
     <!-- Background gradient effect for aesthetic appeal -->
     <div class="gradient"></div>
 
- <!-- Header section that contains the logo and navigation -->
- <header>
-    <div class="container">
-        <header class="header-container">
-            <!-- Logo with a link back to the home page -->
-            <label for="check" class="logo"><a href="index.html">AJC EDDY</a></label>
-            <nav>
-                <!-- Navigation menu links -->
-                <ul class="menu">
-                    <li><a href="downloadcv.html">Download CV</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                </ul>
-                <!-- Dark Mode Toggle switch -->
-                <div class="theme-toggle">
-                    <input type="checkbox" id="theme-switch">
-                    <label for="theme-switch" class="toggle-label" aria-label="Toggle dark mode">
-                        <!-- Font Awesome icon for moon (dark mode indicator) -->
-                        <i class="fas fa-moon"></i> Dark Mode
-                    </label>
-                </div>
-            </nav>
-        </header>
-    </div>
-</header>
+    <!-- Header section that contains the logo and navigation -->
+    <header>
+        <div class="container">
+            <header class="header-container">
+                <!-- Logo with a link back to the home page -->
+                <label for="check" class="logo"><a href="index.html">AJC EDDY</a></label>
+                <nav>
+                    <!-- Navigation menu links -->
+                    <ul class="menu">
+                        <li><a href="downloadcv.html">Download CV</a></li>
+                        <li><a href="contact.html">Contact</a></li>
+                    </ul>
+                    <!-- Dark Mode Toggle switch -->
+                    <div class="theme-toggle">
+                        <input type="checkbox" id="theme-switch">
+                        <label for="theme-switch" class="toggle-label" aria-label="Toggle dark mode">
+                            <!-- Font Awesome icon for moon (dark mode indicator) -->
+                            <i class="fas fa-moon"></i> Dark Mode
+                        </label>
+                    </div>
+                </nav>
+            </header>
+        </div>
+    </header>
 
+    <!-- Main Content Section -->
     <main>
         <div class="maindiv">
             <!-- Main title -->
             <div class="titlediv1">
                 <h1 class="titleh1">DOWNLOAD MY RESUME</h1>
             </div>
-
 
             <!-- Main Download Section -->
             <section class="download-section">
@@ -68,7 +67,6 @@
                 </div>
             </section>
 
-
             <!-- CV Preview -->
             <div class="cv-preview">
                 <img src="Cv preview.png" alt="CV Preview" class="cv-image">
@@ -78,34 +76,25 @@
             <div class="button">
                 <a href="Assy Jean Claude EDDY -CV.docx" download="Assy-JC-EDDY-CV" class="cv-btn">
                     <button class="download-button">Download my CV</button>
-                    <i class="fas fa-download"></i> 
+                    <i class="fas fa-download"></i>
                 </a>
             </div>
 
+            <!-- Professional Summary -->
+            <div class="summary">
+                <br><br>
+                <h2>Why Download My CV?</h2>
+                <br><br>
+                <p>
+                    With expertise in beauty and fashion consulting, and deep knowledge of African textiles, I offer
+                    unique insights and services that set me apart in the industry. My CV details the projects I’ve
+                    led, the clients I’ve worked with, and the contributions I’ve made to the world of fashion and
+                    beauty. Download it today to learn more.
+                </p>
+            </div>
+            <br><br>
         </div>
-
-
-        <!-- Professional Summary -->
-        <div class="summary">
-            <br>
-            <br>
-            <h2>Why Download My CV?</h2>
-            <br>
-            <br>
-            <p>
-                With expertise in beauty and fashion consulting, and deep knowledge of African textiles, I offer
-                unique insights and services that set me apart in the industry. My CV details the projects I’ve
-                led, the clients I’ve worked with, and the contributions I’ve made to the world of fashion and
-                beauty. Download it today to learn more.
-            </p>
-        </div>           
-
-        <br>
-        <br>
-        
     </main>
-
-
 
     <!-- Footer Section -->
     <footer class="footer">
@@ -116,45 +105,37 @@
                 <p><strong>Name:</strong> Assy Jean-Claude EDDY</p>
                 <p><strong>Phone:</strong> +44 7 42 42 42 793</p>
                 <p><strong>Email:</strong> <a href="mailto:ajceddy@gmail.com">ajceddy@gmail.com</a></p>
-                <a aria-label="Chat on WhatsApp" href="https://wa.me/00447424242793"> <img alt="Chat on WhatsApp" src="WhatsAppButtonGreenLarge.png"/><a/>
+                <a aria-label="Chat on WhatsApp" href="https://wa.me/00447424242793">
+                    <img alt="Chat on WhatsApp" src="WhatsAppButtonGreenLarge.png"/>
+                </a>
             </div>
-
 
             <!-- Footer Contact Form -->
             <div class="footer-form">
                 <h2>Get In Touch</h2>
                 <form action="#" method="POST">
-
                     <div class="form-group">
                         <input type="text" name="name" placeholder="Your Name" required>
                     </div>
-
                     <div class="form-group">
                         <input type="email" name="email" placeholder="Your Email" required>
                     </div>
-
                     <div class="form-group">
                         <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
                     </div>
-
                     <button type="submit" class="submit-btn">Send Message</button>
-
                 </form>
-
             </div>
-
         </div>
 
         <!-- Footer Bottom -->
         <div class="footer-bottom">
             <p>&copy; 2024 Assy Jean-Claude EDDY. All rights reserved.</p>
         </div>
-
     </footer>
 
     <!-- Script for dark mode functionality -->
     <script>
-
         // Get the theme switch element by its ID
         const themeSwitch = document.getElementById('theme-switch');
 
@@ -174,7 +155,6 @@
             }
         };
     </script>
-
-
 </body>
+
 </html>
